started command line interface and fixed generic problems with filereader